--- a/bananamama.html
+++ b/bananamama.html
@@ -8,8 +8,8 @@
     <title>Banana Mama | Джиппинг в Анапе</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
     <link href="css/font-awesome.css" rel="stylesheet">
-    <link href="css/bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
+    <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/owl.carousel.css" rel="stylesheet">
     <link href="css/owl.theme.css" rel="stylesheet">
     <link href="css/animate.css" rel="stylesheet">
@@ -23,33 +23,28 @@
 </head>
 <body>
 <header class="header-page-top">
-    <div class="gamburger-block hidden-lg hidden-md hidden-sm">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-main" aria-expanded="false" id="burger">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-        </button>
-    </div>
-    <div class="header-desktop-block hidden-xs">
-        <a href="tel:+79883190857">8 988 319 08 57</a>
-        <a href="mailto:karataeva.olga2015@yandex.ru">karataeva.olga2015@yandex.ru</a>
-    </div>
-    <div class="logo-header">
-        <a href="/"><img src="images/logo.png" alt=""></a>
-    </div>
-    <div class="header-icons">
-        <a href="#" class="main-button main-button-light">ОСТАВИТЬ ЗАЯВКУ</a>
+    <div class="container">
+        <div class="header-flex-top">
+            <div class="gamburger-block hidden-lg hidden-md hidden-sm">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-main" aria-expanded="false" id="burger">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+            </div>
+            <div class="header-desktop-block hidden-xs">
+                <a href="tel:+79883190857">8 988 319 08 57</a>
+                <a href="mailto:karataeva.olga2015@yandex.ru">karataeva.olga2015@yandex.ru</a>
+            </div>
+            <div class="logo-header">
+                <a href="/"><img src="images/logo.png" alt=""></a>
+            </div>
+            <div class="header-icons">
+                <a href="#" class="main-button main-button-light">ОСТАВИТЬ ЗАЯВКУ</a>
+            </div>
+        </div>
     </div>
 </header>
-<div class="search-line-input">
-    <div class="container relative-content">
-        <input type="text" placeholder="Что будем искать?" class="main-page-search">
-        <button type="submit" class="button-search-input">
-            <img src="images/header-icon1.png" alt="" class="header-icon-normal">
-            <img src="images/header-icon1-hover.png" alt="" class="header-icon-hover">
-        </button>
-    </div>
-</div>
 <div class="container">
     <nav class="main-menu-block">
         <ul class="topmenu">
@@ -298,7 +293,7 @@
         <h2>ВИДЕО</h2>
     </div>
     <div class="youtube-video">
-        <iframe width="100%" height="315" src="https://www.youtube.com/embed/m-QZE0LctIA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="100%" height="400" src="https://www.youtube.com/embed/m-QZE0LctIA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     <div class="button-center hidden-xs fadeInUp wow">
         <a href="#" class="main-button main-button-light">ПОДПИСАТЬСЯ НА КАНАЛ</a>
@@ -309,7 +304,7 @@
     <div class="flex-instagram fadeInUp wow">
         <div class="first-instagram-item">
             <div class="instagram-item">
-                <a href="#"><img src="images/foto1.jpg" alt=""></a>
+                <a href="images/foto1.jpg" data-fancybox="gallery"><img src="images/foto1.jpg" alt=""></a>
             </div>
         </div>
         <div class="masonry-instagram">
@@ -318,23 +313,23 @@
                     <a href="images/foto2.jpg" data-fancybox="gallery"><img src="images/foto2.jpg" alt=""></a>
                 </div>
                 <div class="instagram-item">
-                    <a href="#"><img src="images/foto3.jpg" alt=""></a>
+                    <a href="images/foto3.jpg" data-fancybox="gallery"><img src="images/foto3.jpg" alt=""></a>
                 </div>
             </div>
             <div class="instagram-column">
                 <div class="instagram-item">
-                    <a href="#"><img src="images/foto4.jpg" alt=""></a>
+                    <a href="images/foto4.jpg" data-fancybox="gallery"><img src="images/foto4.jpg" alt=""></a>
                 </div>
                 <div class="instagram-item">
-                    <a href="#"><img src="images/foto5.jpg" alt=""></a>
+                    <a href="images/foto5.jpg" data-fancybox="gallery"><img src="images/foto5.jpg" alt=""></a>
                 </div>
             </div>
             <div class="instagram-column">
                 <div class="instagram-item">
-                    <a href="#"><img src="images/foto6.jpg" alt=""></a>
+                    <a href="images/foto6.jpg" data-fancybox="gallery"><img src="images/foto6.jpg" alt=""></a>
                 </div>
                 <div class="instagram-item">
-                    <a href="#"><img src="images/foto7.jpg" alt=""></a>
+                    <a href="images/foto7.jpg" data-fancybox="gallery"><img src="images/foto7.jpg" alt=""></a>
                 </div>
             </div>
         </div>
@@ -383,9 +378,8 @@
     </div>
 </footer>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
 <script src="js/bootstrap.js"></script>
 <script src="js/wow.min.js"></script>
 <script src="js/owl.carousel.js"></script>
