--- a/bananamama.html
+++ b/bananamama.html
@@ -48,7 +48,8 @@
 <div class="container">
     <nav class="main-menu-block">
         <ul class="topmenu">
-            <li><a href="#" class="active">О НАС</a></li>
+            <li><a href="#">ГЛАВНАЯ</a></li>
+            <li><a href="#">О НАС</a></li>
             <li><a href="#">УСЛУГИ</a></li>
             <li><a href="#">МАРШРУТЫ</a></li>
             <li><a href="#">ФОТО</a></li>
@@ -66,118 +67,11 @@
                 <div id="menu-left-acide">
                     <ul>
                         <li><a href="#" class="red-block-catalog">ГЛАВНАЯ</a></li>
-                        <li class="active has-sub">
-                            <a href="#" class="red-block-catalog"><span>КАТАЛОГ</span>
-                                <i class="fa fa-chevron-down" aria-hidden="true"></i></a>
-                            <ul>
-                                <li class="has-sub"><a href="#"><span>ЖЕНЩИНАМ</span>
-                                    <i class="fa fa-chevron-down" aria-hidden="true"></i>
-                                </a>
-                                    <ul class="catalog-menu-down">
-                                        <li class="has-sub">
-                                            <a href="#"><span>Нижнее белье</span>
-                                                <i class="fa fa-chevron-down" aria-hidden="true"></i>
-                                            </a>
-                                            <ul class="catalog-menu-down catalog-left-menu-disk">
-                                                <li><a href="#"><span>Женские трусы</span></a></li>
-                                                <li><a href="#"><span>Нательные майки</span></a></li>
-                                            </ul>
-                                        </li>
-                                        <li class="has-sub">
-                                            <a href="#"><span>Мужские плавки</span>
-                                                <i class="fa fa-chevron-down" aria-hidden="true"></i>
-                                            </a>
-                                            <ul class="catalog-menu-down catalog-left-menu-disk">
-                                                <li><a href="#"><span>Женские трусы</span></a></li>
-                                                <li><a href="#"><span>Нательные майки</span></a></li>
-                                            </ul>
-                                        </li>
-                                        <li class="has-sub">
-                                            <a href="#"><span>Домашняя одежда</span>
-                                                <i class="fa fa-chevron-down" aria-hidden="true"></i>
-                                            </a>
-                                            <ul class="catalog-menu-down catalog-left-menu-disk">
-                                                <li><a href="#"><span>Женские трусы</span></a></li>
-                                                <li><a href="#"><span>Нательные майки</span></a></li>
-                                            </ul>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li class="has-sub"><a href="#" class="second-menu-link"><span>МУЖЧИНАМ</span>
-                                    <i class="fa fa-chevron-down" aria-hidden="true"></i></a>
-                                    <ul class="catalog-menu-down">
-                                        <li class="has-sub">
-                                            <a href="#"><span>Нижнее белье</span>
-                                                <i class="fa fa-chevron-down" aria-hidden="true"></i>
-                                            </a>
-                                            <ul class="catalog-menu-down catalog-left-menu-disk">
-                                                <li><a href="#"><span>Женские трусы</span></a></li>
-                                                <li><a href="#"><span>Нательные майки</span></a></li>
-                                            </ul>
-                                        </li>
-                                        <li class="has-sub">
-                                            <a href="#"><span>Мужские плавки</span>
-                                                <i class="fa fa-chevron-down" aria-hidden="true"></i>
-                                            </a>
-                                            <ul class="catalog-menu-down catalog-left-menu-disk">
-                                                <li><a href="#"><span>Женские трусы</span></a></li>
-                                                <li><a href="#"><span>Нательные майки</span></a></li>
-                                            </ul>
-                                        </li>
-                                        <li class="has-sub">
-                                            <a href="#"><span>Домашняя одежда</span>
-                                                <i class="fa fa-chevron-down" aria-hidden="true"></i>
-                                            </a>
-                                            <ul class="catalog-menu-down catalog-left-menu-disk">
-                                                <li><a href="#"><span>Женские трусы</span></a></li>
-                                                <li><a href="#"><span>Нательные майки</span></a></li>
-                                            </ul>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li class="has-sub"><a href="#"><span>ДЕТЯМ</span>
-                                    <i class="fa fa-chevron-down" aria-hidden="true"></i></a>
-                                    <ul class="catalog-menu-down">
-                                        <li class="has-sub">
-                                            <a href="#"><span>Нижнее белье</span>
-                                                <i class="fa fa-chevron-down" aria-hidden="true"></i>
-                                            </a>
-                                            <ul class="catalog-menu-down catalog-left-menu-disk">
-                                                <li><a href="#"><span>Женские трусы</span></a></li>
-                                                <li><a href="#"><span>Нательные майки</span></a></li>
-                                            </ul>
-                                        </li>
-                                        <li class="has-sub">
-                                            <a href="#"><span>Мужские плавки</span>
-                                                <i class="fa fa-chevron-down" aria-hidden="true"></i>
-                                            </a>
-                                            <ul class="catalog-menu-down catalog-left-menu-disk">
-                                                <li><a href="#"><span>Женские трусы</span></a></li>
-                                                <li><a href="#"><span>Нательные майки</span></a></li>
-                                            </ul>
-                                        </li>
-                                        <li class="has-sub">
-                                            <a href="#"><span>Домашняя одежда</span>
-                                                <i class="fa fa-chevron-down" aria-hidden="true"></i>
-                                            </a>
-                                            <ul class="catalog-menu-down catalog-left-menu-disk">
-                                                <li><a href="#"><span>Женские трусы</span></a></li>
-                                                <li><a href="#"><span>Нательные майки</span></a></li>
-                                            </ul>
-                                        </li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </li>
-                        <li><a href="#" class="red-block-catalog">РАСПРОДАЖА</a></li>
-                        <li><a href="#" class="red-block-catalog">БРЕНДЫ</a></li>
-                        <li><a href="#" class="red-block-catalog">FASHION-БЛОГ PALOMA</a></li>
-                        <li><a href="#" class="red-block-catalog">О КОМПАНИИ</a></li>
-                        <li><a href="#" class="red-block-catalog">КАК ВЫБРАТЬ РАЗМЕР</a></li>
-                        <li><a href="#" class="red-block-catalog">КАК ОФОРМИТЬ ЗАКАЗ</a></li>
-                        <li><a href="#" class="red-block-catalog">ДОСТАВКА</a></li>
-                        <li><a href="#" class="red-block-catalog">ВОЗВРАТ</a></li>
-                        <li><a href="#" class="red-block-catalog">КОНТАКТЫ</a></li>
+                        <li><a href="#" class="red-block-catalog">О НАС</a></li>
+                        <li><a href="#" class="red-block-catalog">УСЛУГИ</a></li>
+                        <li><a href="#" class="red-block-catalog">МАРШРУТЫ</a></li>
+                        <li><a href="#" class="red-block-catalog">ФОТО</a></li>
+                        <li><a href="#" class="red-block-catalog">ВИДЕО</a></li>
                     </ul>
                 </div>
                 <div class="modal-social-flex hidden-xs">
@@ -187,16 +81,6 @@
                     <a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
                     <a href="#"><i class="fa fa-odnoklassniki-square" aria-hidden="true"></i></a>
                     <a href="#"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
-                </div>
-                <div class="burger-mobile-links">
-                    <div class="burger-mobile-link-item">
-                        <i class="fa fa-map-marker" aria-hidden="true"></i>
-                        <button type="button" data-target="#modal-burger" data-toggle="modal">Ростов-на-Дону</button>
-                    </div>
-                    <div class="burger-mobile-link-item">
-                        <i class="fa fa-envelope" aria-hidden="true"></i>
-                        <button type="button">Написать</button>
-                    </div>
                 </div>
             </div>
         </div>
