--- a/bananamama.html
+++ b/bananamama.html
@@ -74,13 +74,16 @@
                         <li><a href="#" class="red-block-catalog">ВИДЕО</a></li>
                     </ul>
                 </div>
-                <div class="modal-social-flex hidden-xs">
+                <div class="modal-social-flex">
                     <a href="#"><i class="fa fa-vk" aria-hidden="true"></i></a>
                     <a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
                     <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                     <a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
                     <a href="#"><i class="fa fa-odnoklassniki-square" aria-hidden="true"></i></a>
                     <a href="#"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
+                </div>
+                <div class="continue">
+                    Закрыть меню
                 </div>
             </div>
         </div>
