--- a/index.html
+++ b/index.html
@@ -19,21 +19,33 @@
             </a>
         </li>
         <li class="pages__item pages__item_red">
-            <a href="catalog.html" target="_blank">
-                <span class="pages__name">Каталог</span>
-                <span class="pages__href">catalog.html</span>
+            <a href="about.html" target="_blank">
+                <span class="pages__name">О нас</span>
+                <span class="pages__href">about.html</span>
             </a>
         </li>
         <li class="pages__item pages__item_red">
-            <a href="card.html" target="_blank">
-                <span class="pages__name">Карточка товара</span>
-                <span class="pages__href">card.html</span>
+            <a href="service.html" target="_blank">
+                <span class="pages__name">Услуги</span>
+                <span class="pages__href">service.html</span>
             </a>
         </li>
         <li class="pages__item pages__item_red">
-            <a href="contacts.html" target="_blank">
-                <span class="pages__name">Контакты</span>
-                <span class="pages__href">contacts.html</span>
+            <a href="routs.html" target="_blank">
+                <span class="pages__name">Маршруты</span>
+                <span class="pages__href">routs.html</span>
+            </a>
+        </li>
+        <li class="pages__item pages__item_red">
+            <a href="foto.html" target="_blank">
+                <span class="pages__name">Фото</span>
+                <span class="pages__href">foto.html</span>
+            </a>
+        </li>
+        <li class="pages__item pages__item_red">
+            <a href="video.html" target="_blank">
+                <span class="pages__name">Видео</span>
+                <span class="pages__href">video.html</span>
             </a>
         </li>
     </ul>
