--- a/bananamama.html
+++ b/bananamama.html
@@ -139,8 +139,12 @@
             <div class="category-links-text"><a href="#">ДЖИПЫ</a></div>
         </div>
         <div class="category-links-item">
-            <a href="#"><img src="images/main-links1.JPG" alt=""></a>
+            <a href="#"><img src="images/main-links4.jpg" alt=""></a>
             <div class="category-links-text"><a href="#">КВАДРОЦИКЛЫ</a></div>
+        </div>
+        <div class="category-links-item">
+            <a href="#"><img src="images/main-links1.JPG" alt=""></a>
+            <div class="category-links-text"><a href="#">БАГГИ</a></div>
         </div>
         <div class="category-links-item">
             <a href="#"><img src="images/main-links3.jpg" alt=""></a>
