--- a/routs.html
+++ b/routs.html
@@ -201,6 +201,9 @@
                 <a href="images/corsika25.jpg" data-fancybox="gallery"><img src="images/corsika25.jpg" alt=""></a>
             </div>
         </div>
+        <div class="button-center fadeInUp wow animated">
+            <a href="#" class="main-button main-button-light" data-target="#modal-send" data-toggle="modal">ЗАБРОНИРОВАТЬ МЕСТА</a>
+        </div>
         <div class="route-page-info">
             <h2>Кипарисовое озеро</h2>
             <p>Во время маршрута мы посещаем все достопримечательности Анапы (Лысая гора, Ласточкины гнезда, Святой поклонный крест, источник и храм Святой Варвары, древний замок, радиолокационные шары, выставку старинных русских колоколов и единственное озеро в России, где прямо из воды растёт 33 кипариса, занесенных в Красную книгу. Такие деревья есть в 2-х местах на всей планете. На Кипарисовом озере купаемся 2 часа и жарим барбекю.</p>
@@ -271,6 +274,9 @@
             <div class="galery-item">
                 <a href="images/kiparis20.jpg" data-fancybox="gallery"><img src="images/kiparis20.jpg" alt=""></a>
             </div>
+        </div>
+        <div class="button-center fadeInUp wow animated">
+            <a href="#" class="main-button main-button-light" data-target="#modal-send" data-toggle="modal">ЗАБРОНИРОВАТЬ МЕСТА</a>
         </div>
     </div>
 </div>
