--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <span class="pages__href">service.html</span>
             </a>
         </li>
-        <li class="pages__item pages__item_red">
+        <li class="pages__item pages__item_orange">
             <a href="routs.html" target="_blank">
                 <span class="pages__name">Маршруты</span>
                 <span class="pages__href">routs.html</span>
