--- a/service.html
+++ b/service.html
@@ -179,6 +179,28 @@
                 <a href="images/cvadro5.jpg" data-fancybox="gallery"><img src="images/cvadro5.jpg" alt=""></a>
             </div>
         </div>
+        <div class="button-center fadeInUp wow animated animated" style="visibility: visible; animation-name: fadeInUp;">
+            <a href="#" class="main-button main-button-light" data-target="#modal-send" data-toggle="modal">ЗАБРОНИРОВАТЬ МЕСТА</a>
+        </div>
+        <div class="route-page-info">
+            <h2>Багги</h2>
+            <p>Путешествие на багги по красивейшим местам Анапы и её окресностей по бездорожью с видами гор и моря. Четырёхколесные багги оснащены коробкой-автомат и рулем, как в автомобиле. Управлять этим видом транспорта вы сможете сами, даже не имея опыта вождения.</p>
+            <p><b>Записывайтесь на поездку!</b></p>
+        </div>
+        <div class="galery-flex-block">
+            <div class="galery-item galery-item-grow">
+                <a href="images/main-links1.JPG" data-fancybox="gallery"><img src="images/main-links1.JPG" alt=""></a>
+            </div>
+            <div class="galery-item galery-item-grow">
+                <a href="images/baggi.JPG" data-fancybox="gallery"><img src="images/baggi.JPG" alt=""></a>
+            </div>
+            <div class="galery-item galery-item-grow">
+                <a href="images/baggi2.jpg" data-fancybox="gallery"><img src="images/baggi2.jpg" alt=""></a>
+            </div>
+        </div>
+        <div class="button-center fadeInUp wow animated animated" style="visibility: visible; animation-name: fadeInUp;">
+            <a href="#" class="main-button main-button-light" data-target="#modal-send" data-toggle="modal">ЗАБРОНИРОВАТЬ МЕСТА</a>
+        </div>
     </div>
 </div>
 <footer class="footer-grey">
