--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <span class="pages__href">about.html</span>
             </a>
         </li>
-        <li class="pages__item pages__item_red">
+        <li class="pages__item pages__item_orange">
             <a href="service.html" target="_blank">
                 <span class="pages__name">Услуги</span>
                 <span class="pages__href">service.html</span>
