--- a/bananamama.html
+++ b/bananamama.html
@@ -247,6 +247,9 @@
         </div>
     </div>
 </section>
+<div id="button-up" style="display: block;">
+    <span></span>
+</div>
 <footer class="footer-grey">
     <div class="container">
         <div class="footer-flex-block">
