--- a/service.html
+++ b/service.html
@@ -200,7 +200,27 @@
         <div class="button-center fadeInUp wow animated animated" style="visibility: visible; animation-name: fadeInUp;">
             <a href="#" class="main-button main-button-light" data-target="#modal-send" data-toggle="modal">ЗАБРОНИРОВАТЬ МЕСТА</a>
         </div>
+        <div class="route-page-info">
+            <h2>Дайвинг</h2>
+            <p>Дайвинг - это погружение с аквалангом в подводный мир курортного побережья Анапы. Вы своими глазами сможете увидеть обитателей и пейзажи подводного царства Чёрного моря. Сопровождать вас при этом будут опытнейшие инструкторы.</p>
+            <p>Дайвинг создан для тех, кто не боится новых впечателний и эмоций</p>
+            <p><b>Записывайтесь прямо сейчас!</b></p>
+        </div>
+        <div class="button-center fadeInUp wow animated animated" style="visibility: visible; animation-name: fadeInUp;">
+            <a href="#" class="main-button main-button-light" data-target="#modal-send" data-toggle="modal">ЗАБРОНИРОВАТЬ МЕСТА</a>
+        </div>
+        <div class="route-page-info">
+            <h2>Параплан</h2>
+            <p>Полёты на параплане - это уникальная возможность полюбоваться бескрайним южным небом и синевой Чёного моря с высоты тичьего полёта. Это прекрасный аттракцион для тех, кто мечтает парить над облаками. Высота, красочные купала и приятный морской ветер не оставят равнодушным никого!</p>
+            <p><b>Бронируйте полёты на параплане у нас!</b></p>
+        </div>
+        <div class="button-center fadeInUp wow animated animated" style="visibility: visible; animation-name: fadeInUp;">
+            <a href="#" class="main-button main-button-light" data-target="#modal-send" data-toggle="modal">ЗАБРОНИРОВАТЬ МЕСТА</a>
+        </div>
     </div>
+</div>
+<div id="button-up" style="display: block;">
+    <span></span>
 </div>
 <footer class="footer-grey">
     <div class="container">
