--- a/service.html
+++ b/service.html
@@ -217,6 +217,22 @@
         <div class="button-center fadeInUp wow animated animated" style="visibility: visible; animation-name: fadeInUp;">
             <a href="#" class="main-button main-button-light" data-target="#modal-send" data-toggle="modal">ЗАБРОНИРОВАТЬ МЕСТА</a>
         </div>
+        <div class="route-page-info">
+            <h2>Аренда яхт</h2>
+            <p>Морские прогулки на комфортабельных яхтах по Чёрному морю - это эмоции, которые остаются надолго! Мы предлагаем могрские путешествия на роскошных судах, при этом, по низким ценам.</p>
+            <p><b>Записывайтесь на путешествия уже сейчас!</b></p>
+        </div>
+        <div class="button-center fadeInUp wow animated">
+            <a href="#" class="main-button main-button-light" data-target="#modal-send" data-toggle="modal">ЗАБРОНИРОВАТЬ МЕСТА</a>
+        </div>
+        <div class="route-page-info">
+            <h2>Морские прогулки</h2>
+            <p>Морские прогулки на комфортабельных яхтах по Чёрному морю - это эмоции, которые остаются надолго! Мы предлагаем могрские путешествия на роскошных судах, при этом, по низким ценам.</p>
+            <p><b>Записывайтесь на путешествия уже сейчас!</b></p>
+        </div>
+        <div class="button-center fadeInUp wow animated">
+            <a href="#" class="main-button main-button-light" data-target="#modal-send" data-toggle="modal">ЗАБРОНИРОВАТЬ МЕСТА</a>
+        </div>
     </div>
 </div>
 <div id="button-up" style="display: block;">
