--- a/service.html
+++ b/service.html
@@ -243,7 +243,7 @@
         <div class="footer-flex-block">
             <div class="footer-flex-item">
                 <div class="footer-logo">
-                    <a href="#"><img src="images/logo.png" alt=""></a>
+                    <a href="/"><img src="images/logo.png" alt=""></a>
                 </div>
             </div>
             <div class="footer-flex-item">
